Lagt til referanse på sjablon